tests/fsharp/typecheck/sigs/neg12.bsl

neg12.fs(15,22,15,45): typecheck error FS0491: The member or object constructor 'GetSchemaSerializable' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

neg12.fs(16,22,16,45): typecheck error FS0491: The member or object constructor 'GetSchemaSerializable' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

neg12.fs(17,44,17,57): typecheck error FS0035: This construct is deprecated: This form of object expression is not used in F#. Use 'member this.MemberName ... = ...' to define member implementations in object expressions.

neg12.fs(17,63,17,86): typecheck error FS0491: The member or object constructor 'GetSchemaSerializable' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

neg12.fs(18,55,18,78): typecheck error FS0491: The member or object constructor 'GetSchemaSerializable' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

neg12.fs(21,58,21,81): typecheck error FS0491: The member or object constructor 'GetSchemaSerializable' is not accessible. Private members may only be accessed from within the declaring type. Protected members may only be accessed from an extending type and cannot be accessed from inner lambda expressions.

neg12.fs(30,8,30,9): typecheck error FS1181: Each argument of the primary constructor for a struct must be given a type, for example 'type S(x1:int, x2: int) = ...'. These arguments determine the fields of the struct.

neg12.fs(39,15,39,18): typecheck error FS0762: Constructors for the type 't' must directly or indirectly call its implicit object constructor. Use a call to the implicit object constructor instead of a record expression.

neg12.fs(44,15,44,18): typecheck error FS0762: Constructors for the type 't2' must directly or indirectly call its implicit object constructor. Use a call to the implicit object constructor instead of a record expression.

neg12.fs(48,20,48,23): typecheck error FS0762: Constructors for the type 't3' must directly or indirectly call its implicit object constructor. Use a call to the implicit object constructor instead of a record expression.
